fix: #81 fix images on mobile

--- a/src/app/pages/code/components/aws/code-aws.component.scss
+++ b/src/app/pages/code/components/aws/code-aws.component.scss
@@ -1,4 +1,5 @@
 @use "text";
+@use "images";
 
 .title {
   @include text.level("title");
@@ -19,6 +20,10 @@
 
   &-code {
     @include text.code;
+  }
+
+  &-image {
+    @include images.contain;
   }
 }
 
